k8s/helm/farm-stack/rendered.yaml
---
# Source: farm-stack/charts/farm-app/templates/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: farm-inventory-service

spec:
  type: NodePort

  selector:
    app: farm-inventory

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080
---
# Source: farm-stack/charts/postgres/templates/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres-service

spec:
  selector:
    app: postgres

  ports:
    - port: 5432
      targetPort: 5432

  type: ClusterIP
---
# Source: farm-stack/charts/farm-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: farm-inventory

spec:
  selector:
    matchLabels:
      app: farm-inventory

  template:
    metadata:
      labels:
        app: farm-inventory

    spec:
      serviceAccountName: farm-service-account

      containers:
        - name: farm-inventory

          image: "arjunmj/farm-inventory:latest"

          imagePullPolicy: Always

          ports:
            - containerPort: 8000
          
          startupProbe:
            httpGet:
              path: /health
              port: 8000

            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 12

          readinessProbe:
            httpGet:
              path: /health
              port: 8000

            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8000

            initialDelaySeconds: 15
            periodSeconds: 10

          resources:
            requests:
              memory: 128Mi
              cpu: 100m

            limits:
              memory: 256Mi
              cpu: 500m
---
# Source: farm-stack/charts/postgres/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:

        - name: postgres

          image: "postgres:17"

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

          resources:
            requests:
              memory: 256Mi
              cpu: 100m

            limits:
              memory: 512Mi
              cpu: 500m
        

          readinessProbe:
            exec:
              command:
              - pg_isready
              - -U
              - postgres

            initialDelaySeconds: 10
            periodSeconds: 5
        
          livenessProbe:
            exec:
              command:
              - pg_isready
              - -U
              - postgres

            initialDelaySeconds: 30
            periodSeconds: 10


      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
# Source: farm-stack/charts/farm-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: farm-inventory-ingress

spec:
  ingressClassName: traefik

  rules:
    - host: farm-inventory.local

      http:
        paths:
          - path: /

            pathType: Prefix

            backend:
              service:
                name: farm-inventory-service

                port:
                  number: 8000
